--- a/LaTeX/Rapport/start.tex
+++ b/LaTeX/Rapport/start.tex
@@ -1,3 +1,5 @@
+% Préambule
+
 \chapter*{Préambule}
 
 \section*{Remerciements}
@@ -17,35 +19,3 @@ Durant ce week-end, avec 2 autres chercheuses (non physiciennes), Florence \text
 Ensuite sur le stand, j'ai pu expliquer les bases scientifiques et des recherches menées par le CNRS et CMS, ainsi que Virgo au près du grand publique. 
 
 De plus, j'ai aussi animé le stand de l'association ?? dont l'objectif est d'expliquer les principes de base de la gravité en 2D avec un drap tenu.
-
-\section*{Résumer du travail effectué}
-
-Mon stage est principalement du développement numérique, et l'ensemble des codes à conserver par l'IP2I sont sur mon GitHub publique : 
-
-\url{https://github.com/alexhxia/nnhAnalysis}
-
-\paragraph{Email Gérald Grenier :}
-
-\subparagraph{Un tutorial de \texttt{ilcsoft} :} 
-\url{https://agenda.linearcollider.org/event/9272/}
-
-\subparagraph{Initialisation \texttt{ilcsoft} :}
-%source /cvmfs/ilc.desy.de/sw/x86_64_gcc82_centos7/v02-02-03/init_ilcsoft.sh
-
-\subparagraph{La documentation et le packet \texttt{git} du format de données \texttt{LCIO} et de la librairie \texttt{Marlin}}
-\begin{itemize}
-	\item \url{https://github.com/iLCSoft/LCIO} \cite{Gaede:2003ip}
-	\item \url{https://github.com/iLCSoft/Marlin}
-\end{itemize}
-
-
-\subparagraph{Pour la deuxième partie du stage :}
-\begin{itemize}
-
-	\item le software en développement : 
-			\url{https://github.com/key4hep}
-			
-	\item et plus particulièrement l'adaptateur \texttt{ilcsoft} vers \texttt{key4hep} : 
-			\url{https://github.com/key4hep/k4MarlinWrapper}
-			
-\end{itemize}  
